--- a/ant-design-vue-boot/public/index.bak.html
+++ b/ant-design-vue-boot/public/index.bak.html
@@ -244,7 +244,7 @@
     window._CONFIG = {};
     window._CONFIG['domianURL'] = 'http://127.0.0.1:8080/boot';
     window._CONFIG['casPrefixUrl'] = 'http://cas.example.org:8443/cas';
-    window._CONFIG['onlinePreviewDomainURL'] = 'http://fileview.jeecg.com/onlinePreview'
+    window._CONFIG['onlinePreviewDomainURL'] = 'http://fileview.a.com/onlinePreview'
     window._CONFIG['staticDomainURL'] = window._CONFIG['domianURL'] + '/sys/common/static';
     window._CONFIG['pdfDomainURL'] =  window._CONFIG['domianURL'] + '/sys/common/pdf/pdfPreviewIframe';
   </script>
