--- a/ant-design-vue-boot/public/index.html
+++ b/ant-design-vue-boot/public/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-     <script src="polyfill.js"></script>
+   <!-- <script src="polyfill.js"></script> -->
     <title>boot</title>
  <script>
    window._CONFIG = {};
    window._CONFIG['domianURL'] = 'http://127.0.0.1:8080/boot';
    window._CONFIG['casPrefixUrl'] = 'http://cas.example.org:8443/cas';
-   window._CONFIG['onlinePreviewDomainURL'] = 'http://fileview.jeecg.com/onlinePreview'
+   window._CONFIG['onlinePreviewDomainURL'] = 'http://fileview.a.com/onlinePreview'
    window._CONFIG['staticDomainURL'] = window._CONFIG['domianURL'] + '/sys/common/static';
    window._CONFIG['pdfDomainURL'] =  window._CONFIG['domianURL'] + '/sys/common/pdf/pdfPreviewIframe';
  </script>   
